# redcub

./: TestMessage
redcub-mail-client/: config.ru
redcub-mail-client/app/controllers/: application.rb  attachedfile.rb  bsfilter.rb  edit.rb  filter.rb  mail_filter.rb  profile.rb  show.rb
redcub-mail-client/app/helpers/: attachedfile_helper.rb  bsfilter_helper.rb  edit_helper.rb  filter_helper.rb  global_helpers.rb  profile_helper.rb  show_helper.rb
redcub-mail-client/app/models/: address.rb  attached-file.rb  filter.rb  host.rb  mail.rb  redcub-models.rb  user.rb
redcub-mail-client/app/views/attachedfile/: index.html.erb
redcub-mail-client/app/views/bsfilter/: index.html.erb
redcub-mail-client/app/views/edit/: _edit.html.erb  edit.html.erb  index.html.erb
redcub-mail-client/app/views/filter/: filter_edit.html.erb
redcub-mail-client/app/views/layout/: application.html.erb
redcub-mail-client/app/views/mail_filter/: filter_edit.html.erb  index.html.erb
redcub-mail-client/app/views/profile/: _profile.html.erb  edit.html.erb  index.html.erb
redcub-mail-client/app/views/show/: _maillist.html.erb  _mailmenu.html.erb  _traylist.html.erb  index.html.erb  list.html.erb  mailview.html.erb
redcub-mail-client/config/: database.yml  dependencies.rb  init.rb  router.rb
redcub-mail-client/config/environments/: development.rb
redcub-mail-client/merb/merb-auth/: setup.rb
redcub-mail-client/public/javascripts/: filter.js  mailer.js  popupmenu.js  profile.js  util.js
redcub-mail-client/public/stylesheets/: highslide-ie6.css  highslide.css  mailer.css  master.css
redcub-mail-client/spec/models/: mail_spec.rb
redcub-mail-client/spec/requests/: attachedfile_spec.rb  bsfilter_spec.rb  edit_spec.rb  filter_spec.rb  profile_spec.rb  setting_spec.rb  show_spec.rb
redcub-server/: .cvsignore  Makefile  Makefile.am  Makefile.in  README  acinclude.m4  config.status  configure  configure.ac  mkinstalldirs
redcub-server/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
redcub-server/etc/: redcub.conf.sample
redcub-server/lib/: Makefile  Makefile.am  Makefile.in  getssafe.rb  order-hash.rb  popd.rb  redcub.rb  smtpd.rb
redcub-server/lib/redcub/: Makefile  Makefile.am  Makefile.in  bsfilter.rb  clamav-scanner.rb  config.rb  daemon.rb  database.rb  deliver.rb  hbase-table.rb  mail-box-db.rb  mail-box.rb  pop-server.rb  queue-db.rb  receiver.rb  redcub-popd.rb  redcub-server.rb  redcub-server.rb~  redcub-smtpd.rb  sender.rb  util.rb
redcub-server/lib/redcub/db-adapter/: Makefile  Makefile.am  Makefile.in  database-mysql.rb  database-sqlite3.rb
redcub-server/lib/redcub/model/: #sendqueue.rb#  .#sendqueue.rb  Makefile  Makefile.am  Makefile.am~  Makefile.in  address.rb  address.rb~  attached-file.rb  attached-file.rb~  data.rb~  filter.rb  filter.rb~  host.rb  localqueue.rb  localqueue.rb~  mail-data.rb  mail-data.rb~  mail.rb  mail.rb~  maildata.rb~  model.rb  queue.rb  sendqueue.rb  sendqueue.rb~  user.rb  user.rb~
redcub-server/scripts/: Makefile  Makefile.am  Makefile.in  init  init~  redcub  redcub-deliver  redcub-pop-server  redcub-receiver  redcub-sender
redcub-server/sql/: hbase.hql  redcab-mailbox.sql  redcab.sql
