#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(redcub, 1.0, [hiroe.orz@gmail.com])

AM_INIT_AUTOMAKE(redcub, 1.0.0)

AC_PREFIX_DEFAULT(/usr/local/)

# Checks for programs.
AC_PROG_MAKE_SET
AC_PROG_INSTALL
AM_PATH_RUBY(1.8.2)


# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 lib/Makefile
                 lib/redcub/Makefile
                 lib/redcub/db-adapter/Makefile
                 scripts/Makefile])
AC_OUTPUT
