redcublibdir	= $(rubysitelibdir)/redcub

redcublib_DATA	= config.rb \
                  deliver.rb \
                  hbase-table.rb \
                  mail-box-db.rb \
                  mail-box.rb \
                  queue-db.rb \
                  receiver.rb \
                  redcub-smtpd.rb \
		  redcub-popd.rb \
		  pop-server.rb \
                  sender.rb \
                  util.rb \
                  daemon.rb

SUBDIRS		= model
