redcublibdir	= $(rubysitelibdir)/redcub

redcublib_DATA	= config.rb \
                  deliver.rb \
                  receiver.rb \
                  redcub-smtpd.rb \
		  redcub-popd.rb \
		  pop-server.rb \
                  sender.rb \
                  util.rb \
                  daemon.rb \
                  clamav-scanner.rb \
                  bsfilter.rb

SUBDIRS		= model
