modeldir	= $(rubysitelibdir)/redcub/model

model_DATA	= model.rb \
                  sendqueue.rb \
                  localqueue.rb \
                  address.rb \
	          host.rb \
                  mail.rb \
                  user.rb \
                  attached-file.rb \
                  filter.rb \
                  queue.rb
